src/style.css
@font-face {
  font-family: TwemojiMozilla;
  src: url("fonts/TwemojiMozilla.ttf") format("truetype");
}

@keyframes rainbow {

  0%,
  100% {
    color: #4885ed;
  }

  25% {
    color: #db3236;
  }

  50% {
    color: #f4c20d;
  }

  75% {
    color: #3cba54;
  }
}

* {
  outline: none !important;
}

::selection {
  background-color: var(--mdc-theme-primary);
  color: var(--mdc-theme-on-primary);
}

::-webkit-scrollbar {
  background: transparent;
  box-shadow: inset 1px 0 var(--bs-gray-300);
}

.table-responsive::-webkit-scrollbar {
  box-shadow: inset 0 0 0 1px var(--bs-gray-300);
}

::-webkit-scrollbar-thumb {
  background-color: rgba(128, 128, 128, .25);
  border-radius: 100px;
  border-color: transparent;
  border-style: solid;
  border-width: thick;
  background-clip: padding-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: rgba(128, 128, 128, .5);
}

::-webkit-scrollbar-thumb:active {
  background-color: rgb(128, 128, 128);
  border-width: initial;
}

body {
  height: 100vh;
}

#titleBar {
  display: flex;
  z-index: 100;
}

.form-group {
  margin-bottom: 1rem;
}

.input-group .btn {
  background-color: #e9ecef;
  border: 1px solid #ced4da;
}

.input-group .form-control.is-invalid,
.input-group .form-select.is-invalid,
.was-validated .input-group .form-control:invalid,
.was-validated .input-group .form-select:invalid {
  z-index: auto;
}

.input-group-text {
  text-align: start;
  white-space: normal;
  min-height: 1rem;
  min-width: 1.75rem;
}

.input-group-text .iconify,
.helper-text>.iconify {
  width: 1rem;
  height: 1rem;
}

.form-control[readonly]:enabled {
  background-color: initial;
}

.ts-wrapper.required:not(.focus, .has-items)>.ts-control,
select:required:not(:valid, :focus),
input:required:not(:valid, :focus, .mdc-text-field__input) {
  background-color: beige;
}

textarea {
  resize: none;
}

.rot-180 {
  transform: rotate(180deg);
}

.drag-area {
  flex: 1;
  -webkit-app-region: drag;
}

.button-rectangle {
  display: flex;
  align-items: center;
  padding: .5rem 15px;
  background: none;
  border: 0;
}

.button-rectangle--red {
  transition: var(--transition);
}

.button-rectangle--red:hover {
  background-color: var(--mdc-theme-error);
  color: var(--mdc-theme-on-error);
}

@keyframes rotate-in {
  from {
    transform: rotate(180deg);
  }

  to {
    transform: none;
  }
}

#buttonDrawer .iconify {
  animation: rotate-in .15s cubic-bezier(0.4, 0, 0.2, 1) 1 both;
}

#buttonDrawer .iconify[data-icon="ic:round-menu"] {
  animation-direction: reverse;
}

#buttonDrawer .iconify[data-icon="ic:round-arrow-back"] {
  animation-direction: normal;
}

#buttonDrawer,
#closeDocuments {
  padding: 0.25rem 0.75rem;
}

#buttonDrawer .iconify,
#closeDocuments .iconify,
.mdc-deprecated-list--dense .mdc-deprecated-list-item__graphic,
.list-group-item .iconify:not(.avatar, .mdc-button__icon, .helper-text>.iconify),
.mdc-text-field__icon,
th .iconify {
  min-width: 1.5rem;
  min-height: 1.5rem;
  height: auto;
}

.hide {
  padding: 0 !important;
  margin: 0 !important;
  border: 0;
  opacity: 0 !important;
  transition: var(--transition);
  user-select: none !important;
  pointer-events: none !important;
  overflow: hidden;
}

.hide:not(.overlay, .modal-body, .position-absolute, .w-100, button) {
  height: 0 !important;
}

.hide:not(.overlay, .modal-body, .position-absolute, .w-100, button, .mdc-tab-bar) {
  max-height: 0 !important;
  min-height: 0 !important;
}

table {
  width: 100%;
}

.table {
  margin: 0;
  min-width: max-content;
}

.table-responsive {
  min-height: 5rem;
  position: relative;
}

tbody>tr {
  text-shadow: 0 0;
  transition: filter var(--transition);
  box-shadow: inset 0 -1px #000, inset 0 1px #000;
}

tbody>tr:last-child {
  box-shadow: inset 0 1px #000;
}

tbody>tr:first-child {
  box-shadow: inset 0 -1px #000;
}

tbody>tr:first-child:last-child {
  box-shadow: none;
}

#cases>tbody>tr.selected,
#cases>tbody>tr.selected:first-child:last-child {
  box-shadow: inset 0 0 0 4px #fff;
}

tbody>tr.selected,
tbody>tr.selected:first-child:last-child {
  box-shadow: inset 0 0 0 4px var(--mdc-theme-primary);
}

tbody[data-dim-status="sentDocs"]>tr:not([data-status="sentDocs"]),
tbody[data-dim-status="invoiced"]>tr:not([data-status="invoiced"]),
tbody[data-dim-status="dropped"]>tr:not([data-status="dropped"]),
tbody[data-dim-status="gop"]>tr:not([data-status="gop"]),
tbody[data-dim-status="payIssued"]>tr:not([data-status="payIssued"]),
tbody[data-dim-status="payReceived"]>tr:not([data-status="payReceived"]),
tbody[data-dim-status="multi"]>tr:not([data-status="multi"]),
tbody[data-dim-status="payNclaim"]>tr:not([data-status="payNclaim"]),
tbody[data-dim-status="active"]>tr:not([data-status="active"]),
tbody[data-dim-status="receivedDocs"]>tr:not([data-status="receivedDocs"]) {
  filter: grayscale(1) opacity(.25);
}

tbody[data-dim-status="sentDocs"]>tr:not([data-status="sentDocs"])>td,
tbody[data-dim-status="invoiced"]>tr:not([data-status="invoiced"])>td,
tbody[data-dim-status="dropped"]>tr:not([data-status="dropped"])>td,
tbody[data-dim-status="gop"]>tr:not([data-status="gop"])>td,
tbody[data-dim-status="payIssued"]>tr:not([data-status="payIssued"])>td,
tbody[data-dim-status="payReceived"]>tr:not([data-status="payReceived"])>td,
tbody[data-dim-status="multi"]>tr:not([data-status="multi"])>td,
tbody[data-dim-status="payNclaim"]>tr:not([data-status="payNclaim"])>td,
tbody[data-dim-status="active"]>tr:not([data-status="active"])>td,
tbody[data-dim-status="receivedDocs"]>tr:not([data-status="receivedDocs"])>td {
  border-color: rgb(0 0 0 / 25%);
}

tbody>tr>td {
  max-width: 20rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

tbody>tr>td:not(:first-child) {
  border-left: 2px solid #000;
  box-shadow: inset 1px 0 transparent, inset -1px 0 transparent;
}

#cases>tbody>tr.selected>td {
  border-color: #fff;
  box-shadow: inset 1px 0 #fff, inset -1px 0 #fff;
}
/* ... */

